Fix scroll position on iOS (#387)
* Add KeyboardAwareFlatList to handle text focus

* Replace KeyboardAwareFlatList with KeyboardAwareScrollView

* Fix lint issues

* Revert android part to KeyboardAvoidingView

* Update gutenberg subrepo ref

* Set keyboardShouldPersistTaps to handled

* Fix travis issues

* Fix failing unittests

* Update gutenberg subrepo ref

* Update gutenberg subrepo ref

* Update flatList as scrollViewRef

Also replaced some spaces with tabs

* Fix flow issue

* Update gutenberg subrepo to point to mobile branch

--- a/src/block-management/block-manager.scss
+++ b/src/block-management/block-manager.scss
@@ -43,3 +43,10 @@
 	flex-direction: row;
 	background-color: white;
 }
+
+.blockToolbarKeyboardAvoidingView {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
